--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,3 +1,14 @@
+@mixin self-clear() {
+  &:after, &:before{
+    display: table;
+    content: "";
+  }
+  &:after{
+    clear: both;
+  }
+}
+
+
 // Breakpoints
 $breakSingleColumn: 768px;
 
