--- a/public/assets/css/style.autoprefixed.css
+++ b/public/assets/css/style.autoprefixed.css
@@ -7279,16 +7279,6 @@ a.th {
   padding: 20px;
 }
 
-.day.column {
-  border-bottom: 1px solid #cccccc;
-}
-
-.mobile-days-controller {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0 20px;
-}
-
 menu {
   padding: 0;
 }
@@ -7310,7 +7300,10 @@ menu {
 }
 
 .mobile-days-controller {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   list-style: none;
+  padding: 0 20px;
 }
 
 .mobile-days-controller:after,
@@ -7383,6 +7376,14 @@ menu {
   }
 }
 
+.days-list {
+  position: relative;
+}
+
 .days-list .day-header {
   display: none;
+}
+
+.days-list .day.column {
+  border-bottom: 1px solid #cccccc;
 }
