--- a/scss/_extends.scss
+++ b/scss/_extends.scss
@@ -22,7 +22,9 @@ menu{
 
 // Days controller
 .mobile-days-controller{
+  box-sizing: border-box;
   list-style: none;
+  padding: 0 20px;
   @include self-clear;
 
   li{
@@ -77,7 +79,14 @@ menu{
 
 // Days list
 .days-list{
+  position: relative;
+
   .day-header{
     display: none;
   }
+
+  .day.column{
+    border-bottom: 1px solid #ccc;
+  }
+
 }
