--- a/css/style.autoprefixed.css
+++ b/css/style.autoprefixed.css
@@ -7303,6 +7303,7 @@ menu {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   list-style: none;
+  margin: 30px 0 0;
   padding: 0 20px;
 }
 
@@ -7384,6 +7385,16 @@ menu {
   display: none;
 }
 
-.days-list .day.column {
-  border-bottom: 1px solid #cccccc;
+.days-list .day-column {
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  position: absolute;
+  padding: 0 20px;
+  margin: 0;
+  left: -100%;
+  width: 100%;
+}
+
+.days-list .day-column.is-active {
+  left: 0;
 }
