--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3883,6 +3883,7 @@ menu {
 .mobile-days-controller {
   box-sizing: border-box;
   list-style: none;
+  margin: 30px 0 0;
   padding: 0 20px; }
   .mobile-days-controller:after, .mobile-days-controller:before {
     display: table;
@@ -3930,5 +3931,12 @@ menu {
   position: relative; }
   .days-list .day-header {
     display: none; }
-  .days-list .day.column {
-    border-bottom: 1px solid #cccccc; }
+  .days-list .day-column {
+    box-sizing: border-box;
+    position: absolute;
+    padding: 0 20px;
+    margin: 0;
+    left: -100%;
+    width: 100%; }
+    .days-list .day-column.is-active {
+      left: 0; }
