Moving files into working directory

--- a/assets/scss/_extends.scss
+++ b/assets/scss/_extends.scss
@@ -5,7 +5,7 @@ menu{
 // Task panels
 .task.panel{
   display: block;
-  padding: 10px 20x;
+  padding: 10px 20px;
   margin: 10px 0;
   width: 100%;
 }
