--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,13 +18,13 @@
   <header class="top-bar">
     <ul class="title-area">
       <li class="name">
-        <h1 class="logo"><a href="#">Manifest Digital Timesheets</a></h1>
+        <h1 class="logo"><a href="#" class="js-deadLink">Timesheet Prototype</a></h1>
       </li>
-      <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+      <li class="toggle-topbar menu-icon"><a href="#" class="js-deadLink"><span>Menu</span></a></li>
     </ul>
     <nav class="top-bar-section">
       <ul class="right">
-        <li><a href="#">Ezekiel Binion, logout</a></li>
+        <li><a href="#" class="js-deadLink">Ezekiel Binion, logout</a></li>
       </ul>
     </nav>
   </header>
