fixed month thing

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,7 +9,7 @@ title: Timesheet Prototype
 
     <ul class="week-controls">
       <li><a href="#previous-week" class="foundicon-left-arrow icon js-deadLink"></a></li>
-      <li><h2><a href="#months">October 2013</a></h2></li>
+      <li><h2><a href="#months" class="js-deadLink">October 2013</a></h2></li>
       <li><a href="#next-week" class="foundicon-right-arrow icon js-deadLink"></a></li>
     </ul>
 
